@@ -31,3 +31,11 @@ testing {
     }
 }
 
+tasks {
+    task("runSingleNodeCluster", JavaExec::class) {
+        group = "ide"
+        classpath = sourceSets.main.get().runtimeClasspath
+        mainClass.set("io.aeron.samples.ClusterApp")
+        jvmArgs("--add-opens=java.base/sun.nio.ch=ALL-UNNAMED")
+    }
+}
